<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.sonatype.oss</groupId>
        <artifactId>oss-parent</artifactId>
        <version>9</version>
    </parent>
    <groupId>com.github.tocrhz</groupId>
    <artifactId>mqtt-spring-boot-starter</artifactId>
    <version>1.2.1</version>
    <name>mqtt-spring-boot-starter</name>
    <description>MQTT starter for Spring Boot, easier to use.</description>

    <licenses>
        <license>
            <name>The Apache Software License,Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>tocrhz</name>
            <url>https://github.com/tocrhz/</url>
            <email>812121600@qq.com</email>
            <roles>
                <role>developer</role>
                <role>admin</role>
            </roles>
        </developer>
    </developers>

    <scm>
        <connection>scm:https://github.com/tocrhz/mqtt-spring-boot-starter</connection>
        <developerConnection>scm:https://github.com/tocrhz/mqtt-spring-boot-starter</developerConnection>
        <url>https://github.com/tocrhz/mqtt-spring-boot-starter</url>
    </scm>

    <properties>
        <java.version>1.8</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <sprint-boot.version>2.4.0</sprint-boot.version>
        <slf4j.version>1.7.30</slf4j.version>
        <paho.mqttv3.version>1.2.5</paho.mqttv3.version>
        <jackson.version>2.11.2</jackson.version>
        <lombok.version>1.18.12</lombok.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.eclipse.paho</groupId>
            <artifactId>org.eclipse.paho.client.mqttv3</artifactId>
            <version>${paho.mqttv3.version}</version>
        </dependency>

        <!-- spring-boot: 1.5.x ~ 2.4.0 -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot</artifactId>
            <version>${sprint-boot.version}</version>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-autoconfigure</artifactId>
            <version>${sprint-boot.version}</version>
            <optional>true</optional>
        </dependency>
        <!-- optional: configuration-processor -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-configuration-processor</artifactId>
            <version>${sprint-boot.version}</version>
            <optional>true</optional>
        </dependency>
        <!-- optional: jackson -->
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>${jackson.version}</version>
            <optional>true</optional>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
            </plugin>
        </plugins>
    </build>

</project>
